# carla-mcp

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
examples/: claude_desktop_config.json
src/carla_mcp/: __init__.py  __main__.py  server.py
tests/: smoke_test_all.py
